HospitalManagement/force-app/main/default/objects/Student__c/fields/CGPA__c.field-meta.xml
<CustomField>
    <fullName>CGPA__c</fullName>
    <label>CGPA</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>