HospitalManagement/force-app/main/default/objects/Student__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <label>Placement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Placed</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>